--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             transform: scale(1);
             width: 100vw;
             z-index: 0;
-            background-image: url(''), linear-gradient(to top, transparent, transparent), url('assets/images/bg.jpg?v=b8641b91');
+            background-image: url(''), linear-gradient(to top, transparent, transparent), url('assets/images/bg.jpg');
             background-size: 369px, auto, cover;
             background-position: center, 0% 0%, center;
             background-repeat: repeat, repeat, no-repeat;
